@@ -35,6 +35,17 @@ ssl_default="yes"
 
 good_os="yes"
 case "$(uname -s)" in
+	FreeBSD)
+		AC_MSG_NOTICE([*** FreeBSD Machine ***])
+		AC_DEFINE([UPERF_FREEBSD],[1],[Setting machine os to FreeBSD])
+		good_os="no"
+		sctp_default="yes"
+		ssl_default="yes"
+		#UPERF_LIBS="$UPERF_LIBS -lrt -lm"
+		CFLAGS="-D_GNU_SOURCE $CFLAGS"
+		SCTP_LIBNAME="c"
+		SCTP_LIBS=""
+		;;
 	Linux)
 		AC_MSG_NOTICE([*** Linux Machine ***])
 		AC_DEFINE([UPERF_LINUX],[1],[Setting machine os to Linux])
@@ -43,12 +54,16 @@ case "$(uname -s)" in
 		ssl_default="no"
 		#UPERF_LIBS="$UPERF_LIBS -lrt -lm"
 		CFLAGS="-D_GNU_SOURCE $CFLAGS"
+		SCTP_LIBS="-lsctp"
+		SCTP_LIBNAME="sctp"
 		;;
 	SunOS)
 		AC_MSG_NOTICE([*** Solaris Machine ***])
 		AC_DEFINE([UPERF_SOLARIS],[1],[Setting machine os to Solaris])
 		UPERF_LIBS="$UPERF_LIBS -lsocket -lnsl -lumem -lkstat -lsendfile"
 		LIBS=$UPERF_LIBS
+		SCTP_LIBS="-lsctp"
+		SCTP_LIBNAME="sctp"
 		;;
 esac
 
@@ -141,7 +156,7 @@ else
 	AC_MSG_RESULT(no)
 fi
 
-AC_CHECK_HEADERS([atomic.h siginfo.h sys/int_limits.h sys/lwp.h signal.h sys/byteorder.h poll.h sys/poll.h sys/varargs.h stdint.h])
+AC_CHECK_HEADERS([atomic.h siginfo.h sys/int_limits.h sys/lwp.h signal.h sys/byteorder.h poll.h sys/poll.h sys/varargs.h stdint.h termio.h stropts.h sys/ttycom.h wait.h alloca.h sys/sendfile.h])
 
 AC_CHECK_FUNCS([nanosleep])
 
@@ -182,7 +197,7 @@ AC_ARG_ENABLE(sctp,
 	enable_sctp=$sctp_default)
 if test "x$enable_sctp" = "xyes"; then
 	AC_MSG_RESULT(yes)
-	AC_CHECK_LIB([sctp],[sctp_sendmsg], [UPERF_LIBS="$UPERF_LIBS -lsctp"],
+	AC_CHECK_LIB([$SCTP_LIBNAME],[sctp_sendmsg], [UPERF_LIBS="$UPERF_LIBS $SCTP_LIBS"],
 		[AC_MSG_ERROR([cannot find libsctp, Try with --disable-sctp])])
 
 	AM_CONDITIONAL([SCTP_C], [true])
